Fix alignment and positioning issues

--- a/assets/stylesheets/app/index.css
+++ b/assets/stylesheets/app/index.css
@@ -289,7 +289,7 @@ textarea {
 #render {
     width: 100%;
     height: 100%;
-    top: -762px;
+    top: calc(112px - 100vh);
     position: relative;
 }
 
